--- a/templates/3circles.html
+++ b/templates/3circles.html
@@ -51,5 +51,5 @@
 	<div class="bounce2"></div>
 	<div class="bounce3"></div>
 </div>
-<span ng-hide="active" ng-bind="'SAVE'"></span>
+<span ng-hide="active">SAVE</span>
 <input type="submit" style="display:none" />
